# stepshot

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  install.sh
.github/workflows/: release.yml  rust.yml
src/: a11y.rs  annotate.rs  capture.rs  cursor.rs  export_docx.rs  export_pdf.rs  i18n.rs  icon.rs  input.rs  main.rs  model.rs  notify.rs  platform.rs  report.rs  selftest.rs  session.rs  tray.rs
src/i18n/: de.rs  en.rs
src/win/: a11y.rs  capture.rs  cursor.rs  input.rs  mod.rs  tray.rs
